<resources>
    <string name="app_name">Sharda University</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="topic">Topic</string>
    <string name="enter_topic">Enter Topic</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="change_password">Change Password</string>
    <string name="logout">LogOut</string>
    <string name="edit_timings">Edit Timings</string>
    <string name="add_timings">Add Timings</string>
    <string name="edit_year">Edit Year</string>
    <string name="add_year">Add Year</string>
    <string name="edit_subjects">Edit Subjects</string>
    <string name="add_subjects">Add Subjects</string>
    <string name="edit_department">Edit Department</string>
    <string name="add_department">Add Department</string>
    <string name="edit_student">Edit Student</string>
    <string name="add_school">Add School</string>
    <string name="edit_school">Edit School</string>
    <string name="add_student">Add Student</string>
    <string name="edit_master">Edit Master</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="edit_teacher">Edit Teacher</string>
    <string name="add_master">Add Master</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="notification">Notify</string>
    <string name="likes">Favs</string>
    <string name="happy">Happy</string>
    <string name="room">Room</string>
    <string name="restaurant">Food</string>
    <string name="shop">Shop</string>
    <string name="photos">Pics</string>
    <string name="call">Call</string>
    <string name="notice">Notice</string>
    <string name="attendance">Attendance</string>
    <string name="marksheet">Marksheet</string>
    <string name="assignments">Assignments</string>
    <string name="marksheets">Marksheets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="year">Year</string>

    <string name="subject_name">Subject Name</string>
    <string name="subject_code">Subject Code</string>
    <string name="add_classes">Add Classes</string>

    <string name="add_groups">Add Groups</string>
    <string name="group_name">Group Name</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="department_name">Department Name</string>
    <string name="edit_classes">Edit Classes</string>
    <string name="edit_groups">Edit Groups</string>
    <string name="class_name">Class Name</string>
    <string name="delete_department">Delete Department</string>
    <string name="delete_year">Delete Year</string>
    <string name="delete_subjects">Delete Subjects</string>
    <string name="delete_classes">Delete Classes</string>
    <string name="delete_groups">Delete Groups</string>
    <string name="delete_timings">Delete Timings</string>
    <string name="delete_school">Delete School</string>
    <string name="delete_timetable">Delete TimeTable</string>
    <string name="edit_timetable">Edit TimeTable</string>
    <string name="add_timetable">Add TimeTable</string>
    <string name="delete_days">Delete Days</string>
    <string name="add_days">Add Days</string>
    <string name="edit_days">Edit Days</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_subjects">Select Subjects</string>

    <string name="select_classes">Select Classes</string>
    <string name="subject_names_and_codes">Subject Names And Codes</string>
    <string name="class_section_names">Class/Section Names</string>

    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="delete_teacher">Delete Teacher</string>
    <string name="delete_class">Delete Class</string>
    <string name="subjects">Subjects</string>
    <string name="student_name">Student Name</string>
    <string name="student_email">Student Email</string>
    <string name="system_id">System Id</string>

    <string name="teacher_name">Teacher Name</string>
    <string name="teacher_email">Teacher Email</string>
    <string name="teacher_system_id">Teacher System Id</string>

    <string name="change_subjects">Change Subjects</string>
    <string name="create_time_table">Create Time Table</string>
    <string name="select_day">Select Day</string>
    <string name="select_time">Select Time</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="select_group">Select Group</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_class">Select Class</string>
    <string name="details">Details</string>
    <string name="addsubject">Add Subject</string>
    <string name="student_home">Student Home</string>
    <string name="select_groups">Select Groups</string>
    <string name="admin_home">Admin Home</string>
    <string name="day_selected">Day Selected</string>
    <string name="subject_details">Subject Details</string>
    <string name="group_details">Group Details</string>
    <string name="subject_location">Subject Location</string>
    <string name="school_name">School Name</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="time">Time</string>
    <string name="time_table">Time Table</string>
    <string name="notices">Notices</string>
    <string name="delete_marksheets">Delete Marksheets</string>
    <string name="edit_marksheet">Edit Marksheet</string>
    <string name="add_marksheet">Add Marksheet</string>
    <string name="delete_marksheet">Delete Marksheet</string>
    <string name="view_marksheet">View Marksheet</string>
    <string name="delete_attendance">Delete Attendance</string>
    <string name="edit_attendance">Edit Attendance</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="view_notice">View Notice</string>
    <string name="add_notice">Add Notice</string>
    <string name="delete_assignment">Delete Assignment</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="view_assignments">View Assignments</string>
    <string name="teacher_code">Teacher Code</string>
    <string name="add_marksheets">Add Marksheets</string>
    <string name="add_dean">Add Dean</string>
    <string name="edit_dean">Edit Dean</string>
    <string name="delete_dean">Delete Dean</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="view_notices">View Notices</string>
    <string name="add_periods">Add Periods</string>
    <string name="period_number">Period Number</string>
    <string name="delete_periods">Delete Periods</string>
    <string name="export_data">Export Data</string>
    <string name="export_teachers_data">Export Teachers Data</string>
    <string name="add_teachers">Add_Teachers</string>
    <string name="select_file_excel">Select File (Excel)</string>
    <string name="add_students_from_file">Add Students From File</string>
    <string name="add_deans">Add Deans</string>
    <string name="add_teachers_from_file">Add Teachers From File</string>
    <string name="add_dean_from_file">Add Dean From File</string>
    <string name="export_structure_data">Export Structure Data</string>

</resources>
